questions added to data mmodel